{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 2758,
  "lineage": "5d1b917f-8fcd-3bff-361f-c710eecf0478",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:088568138707:loadbalancer/app/ALB-ECS-Service/e6c4941808b6bb78",
            "arn_suffix": "app/ALB-ECS-Service/e6c4941808b6bb78",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-ECS-Service-949937810.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:088568138707:loadbalancer/app/ALB-ECS-Service/e6c4941808b6bb78",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB-ECS-Service",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b4c209e7ed8746ff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b8b66440659b1aca"
              },
              {
                "subnet_id": "subnet-0fec7f9b207b611fb"
              }
            ],
            "subnets": [
              "subnet-0b8b66440659b1aca",
              "subnet-0fec7f9b207b611fb"
            ],
            "vpc_id": "vpc-037e14410f36f0abb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.security-group.aws_security_group.alb_sg_id",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:088568138707:listener/app/ALB-ECS-Service/e6c4941808b6bb78/89c7edf5068400b5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:088568138707:targetgroup/ECS-TG/a949ffb4c099a332",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:088568138707:listener/app/ALB-ECS-Service/e6c4941808b6bb78/89c7edf5068400b5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:088568138707:loadbalancer/app/ALB-ECS-Service/e6c4941808b6bb78",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.LoadBalancer",
            "module.alb.aws_lb_target_group.TargetGroup",
            "module.security-group.aws_security_group.alb_sg_id",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "TargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:088568138707:targetgroup/ECS-TG/a949ffb4c099a332",
            "arn_suffix": "targetgroup/ECS-TG/a949ffb4c099a332",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 35,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:088568138707:targetgroup/ECS-TG/a949ffb4c099a332",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ECS-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:security-group/sg-0f648a3ec04165827",
            "description": "SecurityGroup for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f648a3ec04165827",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0b4c209e7ed8746ff"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ECS-SG",
            "name_prefix": "",
            "owner_id": "088568138707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS-SG"
            },
            "tags_all": {
              "Name": "ECS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security-group.aws_security_group.alb_sg_id",
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:security-group/sg-0b4c209e7ed8746ff",
            "description": "SecurityGroup for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4c209e7ed8746ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB-SG",
            "name_prefix": "",
            "owner_id": "088568138707",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ad73e9cca01c814",
            "domain": "vpc",
            "id": "eipalloc-04ad73e9cca01c814",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-118-61-233.us-east-2.compute.amazonaws.com",
            "public_ip": "18.118.61.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf8714b6eab62c00",
            "domain": "vpc",
            "id": "eipalloc-0cf8714b6eab62c00",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-181-216.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.181.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:internet-gateway/igw-02ff5480c1c15a191",
            "id": "igw-02ff5480c1c15a191",
            "owner_id": "088568138707",
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ad73e9cca01c814",
            "association_id": "eipassoc-05c50b5a3c47f3273",
            "connectivity_type": "public",
            "id": "nat-0d8acbe74c63f0717",
            "network_interface_id": "eni-09d5c508ce7f648ad",
            "private_ip": "18.0.0.94",
            "public_ip": "18.118.61.233",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fec7f9b207b611fb",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf8714b6eab62c00",
            "association_id": "eipassoc-0883b390f2499f15c",
            "connectivity_type": "public",
            "id": "nat-0e69c1c73995a9a94",
            "network_interface_id": "eni-0bd661f46544f5964",
            "private_ip": "18.0.2.183",
            "public_ip": "3.14.181.216",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b8b66440659b1aca",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:route-table/rtb-0a78468585cca0ef6",
            "id": "rtb-0a78468585cca0ef6",
            "owner_id": "088568138707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d8acbe74c63f0717",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trex-dev--private"
            },
            "tags_all": {
              "Name": "trex-dev--private"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:route-table/rtb-0aaa607b4d09f7392",
            "id": "rtb-0aaa607b4d09f7392",
            "owner_id": "088568138707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e69c1c73995a9a94",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "trex-dev--private"
            },
            "tags_all": {
              "Name": "trex-dev--private"
            },
            "timeouts": null,
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:route-table/rtb-0511e1740dfe73167",
            "id": "rtb-0511e1740dfe73167",
            "owner_id": "088568138707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ff5480c1c15a191",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.Main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:route-table/rtb-01cb91cc70dd451f6",
            "id": "rtb-01cb91cc70dd451f6",
            "owner_id": "088568138707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ff5480c1c15a191",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_vpc.Main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4c18784645453c0",
            "route_table_id": "rtb-0a78468585cca0ef6",
            "subnet_id": "subnet-0452e5ed5f4294167"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007fcf327b1558af3",
            "route_table_id": "rtb-0aaa607b4d09f7392",
            "subnet_id": "subnet-0dc0ac16372189ae6"
          },
          "dependencies": [
            "module.vpc.aws_eip.nateIP",
            "module.vpc.aws_nat_gateway.NATgw",
            "module.vpc.aws_route_table.PrivateRT",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_RT_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c43337af243cd87a",
            "route_table_id": "rtb-0511e1740dfe73167",
            "subnet_id": "subnet-0fec7f9b207b611fb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c69c29fd556d37b6",
            "route_table_id": "rtb-01cb91cc70dd451f6",
            "subnet_id": "subnet-0b8b66440659b1aca"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.IGW",
            "module.vpc.aws_route_table.PublicRT",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:subnet/subnet-0452e5ed5f4294167",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "18.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0452e5ed5f4294167",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088568138707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trex-dev--private-sg",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "trex-dev--private-sg",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:subnet/subnet-0dc0ac16372189ae6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "18.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dc0ac16372189ae6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "088568138707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "trex-dev--private-sg",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "trex-dev--private-sg",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:subnet/subnet-0fec7f9b207b611fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "18.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fec7f9b207b611fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088568138707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Network": "Public",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Network": "Public",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:subnet/subnet-0b8b66440659b1aca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "18.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8b66440659b1aca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "088568138707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Network": "Public",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Network": "Public",
              "kubernetes.io/cluster/trex-dev-": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-037e14410f36f0abb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.Main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:088568138707:vpc/vpc-037e14410f36f0abb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "18.0.0.0/16",
            "default_network_acl_id": "acl-08011712fa7f1df0d",
            "default_route_table_id": "rtb-081f2188e7cb5b692",
            "default_security_group_id": "sg-02b102f7e668560c1",
            "dhcp_options_id": "dopt-00bdbfe4505b12604",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037e14410f36f0abb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081f2188e7cb5b692",
            "owner_id": "088568138707",
            "tags": {
              "Name": "dev-env"
            },
            "tags_all": {
              "Name": "dev-env"
            }
          }
        }
      ]
    }
  ]
}